minikube/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-cluster
  labels:
    name: local-cluster
