minikube/02_deployment_svc-dumper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-dumper
  namespace: local-cluster
spec:
  selector:
    matchLabels:
      app: svc-dumper
  replicas: 1
  template:
    metadata:
      labels:
        app: svc-dumper
    spec:
      containers:
        - name: svc-dumper
          image: svc-dumper
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
