minikube/02_hello-world.yaml
apiVersion: v1
kind: List
items:

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: hello-world
    namespace: local-cluster
    labels:
      name: hello-world
  spec:
    selector:
      matchLabels:
        app: hello-world
    replicas: 1
    template:
      metadata:
        labels:
          app: hello-world
      spec:
        containers:
          - name: hello-world
            image: gcr.io/google-samples/hello-app:1.0
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 8080
            resources:
              limits:
                cpu: 100m
                memory: 128Mi

- apiVersion: v1
  kind: Service
  metadata:
    name: hello-world
    namespace: local-cluster
  spec:
    type: NodePort
    selector:
      app: hello-world
    ports:
      - port: 8080
        nodePort: 30880
