minikube/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-dumper
  namespace: local-cluster
spec:
  type: NodePort
  selector:
    app: svc-dumper
  ports:
    - port: 8888
      nodePort: 30888
