minikube/03_service_hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: local-cluster
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - port: 8080
      nodePort: 30880
