minikube/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: local-cluster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dumper.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-dumper
                port: 
                  number: 8888
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port: 
                  number: 8080
